<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quran"
            android:icon="@drawable/splash_ico"
            android:title="@string/menu_quran" />
        <item
            android:id="@+id/nav_schedule_prayer"
            android:icon="@drawable/ic_mosque"
            android:title="@string/schedule_prayer" />

<!--        <item-->
<!--            android:id="@+id/nav_rating"-->
<!--            android:icon="@drawable/ic_menu_rate"-->
<!--            android:title="@string/menu_ranting"-->
<!--            />-->
<!--        <item-->
<!--            android:id="@+id/nav_contact"-->
<!--            android:icon="@drawable/ic_menu_contact"-->
<!--            android:title="@string/menu_contact" />-->
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/menu_bookmark" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_about_us" />
    </group>
</menu>